# CLionConanTemplate

./: CMakeLists.txt  PollItems.cpp  PollItems.h  README.md  ZMessage.cpp  ZMessage.h  build.sh  conanfile.txt  main.cpp
